Fixed mobile layout issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,7 +51,7 @@ textarea {
 
 #title-bar-wrapper {
   height: 50px;
-  min-width: 960px;
+  /*min-width: 960px;*/
   background-image: -moz-linear-gradient(top, #123456, #222222);
   background-image: -ms-linear-gradient(top, #123456, #222222);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#123456), to(#222222));
@@ -87,6 +87,10 @@ textarea {
 .title-list {
   padding-left:70px;
   font-weight: bold;
+}
+
+.info-box {
+  padding: 15px;
 }
 
 .season_header {
